--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/creaotr/version-JG-id-65c84ddf0e521900077dcb59-/main/media/download (1).jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/creaotr/version-JG-id-65c84ddf0e521900077dcb59-/main/media/frog-cute.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
